# ocs-cmake-utils

./: LICENSE  LICENSE.txt  README.md
MSVCCRT-sample/: CMakeLists.txt
MSVCCRT-sample/src/: main.cpp
botan-sample/: CMakeLists.txt
botan-sample/src/: main.cpp
cmake/: GTest.cmake  JNI.cmake  MSVCCRT.cmake
dummylib/: CMakeLists.txt
dummylib-test/: CMakeLists.txt
gtest-sample/: CMakeLists.txt
gtest-sample/src/: dummytest.cpp  dummytest.h
jni-sample/: CMakeLists.txt
jni-sample/src/: jni-main-nolib.cpp  jni-main.cpp
sample/: CMakeLists.txt
sample/cmake/: GTest.cmake
